<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="comp3350.wwsys.presentation.login.SignUpActivity">

    <!-- Fixed Wealth Wise Header -->
    <include
        android:id="@+id/header"
        layout="@layout/ww_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Scrollable Content Container -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Container for Buttons and Inputs -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="100dp"
            android:paddingBottom="300dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.3">

                <!-- First Name -->
                <EditText
                    android:id="@+id/firstName"
                    style="@style/IOSInputFieldStyle"
                    android:autofillHints="firstName"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"/>

                <!-- Last Name -->
                <EditText
                    android:id="@+id/lastName"
                    style="@style/IOSInputFieldStyle"
                    android:autofillHints="lastName"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName" />

                <!-- Email -->
                <EditText
                    android:id="@+id/email"
                    style="@style/IOSInputFieldStyle"
                    android:autofillHints="emailAddress"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <!-- Password with toggle -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/ios_blue"
                    app:hintEnabled="false"
                    app:boxBackgroundMode="none">

                    <EditText
                        android:id="@+id/password"
                        style="@style/IOSInputFieldStyle"
                        android:autofillHints="password"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Confirm Password with toggle -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/ios_blue"
                    app:hintEnabled="false"
                    app:boxBackgroundMode="none"
                    android:layout_marginBottom="32dp">

                    <EditText
                        android:id="@+id/confirmPassword"
                        style="@style/IOSInputFieldStyle"
                        android:autofillHints="confirmPassword"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Sign Up Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signUpBtn"
                    style="@style/IOSPrimaryButtonStyle"
                    android:text="@string/signup" />

                <!-- Go Back -->
                <TextView
                    android:id="@+id/goBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_back"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="100dp"
                    android:textColor="@color/ios_blue"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>