...
                    android:layout_marginBottom="8dp"
                    app:tint="@color/ios_blue"
                    />

                <!-- Name -->
                <TextView
                    android:id="@+id/user_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"/>

...
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:alpha="0.5"/>

            <!-- Email (new addition) -->
            <TextView
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="#757575"
                android:layout_marginBottom="24dp"/>
...
