...
    />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:layout_marginBottom="0dp" />

    <!-- Light grey line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
...
