<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".presentation.MainActivity">

    <!-- Wealth Wise Header -->
    <include
        android:id="@+id/header"
        layout="@layout/ww_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Buttons  -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/IOSPrimaryButtonStyle"
            android:text="@string/login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            style="@style/IOSSecondaryButtonStyle"
            android:layout_marginTop="10dp"
            android:text="@string/signup" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>