...
    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        />
    <item
        android:id="@+id/analytics"
        android:icon="@drawable/ic_graph"
        android:title="@string/Analytics" />
    <item
        android:id="@+id/tracking"
        android:icon="@drawable/ic_pencil"
        android:title="@string/tracking" />
...
